[package]
name = "encrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigdecimal = "0.3.0"
primitive-types = { version = "0.11.1", features = ["serde"] }
rand = {version = "0.7.3"}
rand_chacha = "*"
clap = { version = "3.2.8", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
base64 = "*"
toml = "*"
flate2 = "1.0.24"
